// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueueTable BodyRows Matches snapshot with default props 1`] = `
<DocumentFragment>
  First columnSecond columnSomethingFirst column second rowSecond column second rowSomething ElseFirst column third rowSecond column third rowEstablishClaim
</DocumentFragment>
`;

exports[`QueueTable FooterRow Matches snapshot with default props 1`] = `
<DocumentFragment>
  Some Footer
</DocumentFragment>
`;

exports[`QueueTable FooterRow Renders no footer when not present in the column 1`] = `<DocumentFragment />`;

exports[`QueueTable HeaderRow Can filter when not using task pages API and filtering is enabled 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Third"
    data-css-9shxm7=""
  >
    <span
      id="header-type"
    >
      Third
    </span>
    <span
      data-css-ilmt4b=""
      data-testid="table-filter-testid"
    >
      <svg
        class="table-icon unselected-filter-icon"
        height="20"
        role="button"
        tabindex="0"
        viewBox="0 0 21 21"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g>
            <rect
              class="unselected-filter-icon-border-1"
              fill="#fff"
              fill-rule="nonzero"
              height="20"
              rx="2"
              stroke="#212121"
              width="20"
              x="0.5"
              y="0.5"
            />
            <path
              class="unselected-filter-icon-inner-1"
              d="M16.2335889,6.4 L11.5555083,10.8333333 L11.5555083,14.8333333 C11.5555083,15.0166667 11.3972274,15.1666667 11.2037729,15.1666667 L9.7968314,15.1666667 C9.60337694,15.1666667 9.44509602,15.0166667 9.44509602,14.8333333 L9.44509602,10.8333333 L4.76701542,6.4 C4.55597419,6.2 4.69666834,5.83333333 5.01323019,5.83333333 L15.9697874,5.83333333 C16.303936,5.83333333 16.4446301,6.2 16.2335889,6.4 Z"
              fill="#212121"
            />
          </g>
        </g>
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Can filter when not using task pages API and getting filter values 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Third"
    data-css-9shxm7=""
  >
    <span
      id="header-type"
    >
      Third
    </span>
    <span
      data-css-ilmt4b=""
      data-testid="table-filter-testid"
    >
      <svg
        class="table-icon unselected-filter-icon"
        height="20"
        role="button"
        tabindex="0"
        viewBox="0 0 21 21"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g>
            <rect
              class="unselected-filter-icon-border-1"
              fill="#fff"
              fill-rule="nonzero"
              height="20"
              rx="2"
              stroke="#212121"
              width="20"
              x="0.5"
              y="0.5"
            />
            <path
              class="unselected-filter-icon-inner-1"
              d="M16.2335889,6.4 L11.5555083,10.8333333 L11.5555083,14.8333333 C11.5555083,15.0166667 11.3972274,15.1666667 11.2037729,15.1666667 L9.7968314,15.1666667 C9.60337694,15.1666667 9.44509602,15.0166667 9.44509602,14.8333333 L9.44509602,10.8333333 L4.76701542,6.4 C4.55597419,6.2 4.69666834,5.83333333 5.01323019,5.83333333 L15.9697874,5.83333333 C16.303936,5.83333333 16.4446301,6.2 16.2335889,6.4 Z"
              fill="#212121"
            />
          </g>
        </g>
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Can filter when using task pages API and column has filter options 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Third"
    data-css-9shxm7=""
  >
    <span
      id="header-type"
    >
      Third
    </span>
    <span
      data-css-ilmt4b=""
      data-testid="table-filter-testid"
    >
      <svg
        class="table-icon unselected-filter-icon"
        height="20"
        role="button"
        tabindex="0"
        viewBox="0 0 21 21"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g>
            <rect
              class="unselected-filter-icon-border-1"
              fill="#fff"
              fill-rule="nonzero"
              height="20"
              rx="2"
              stroke="#212121"
              width="20"
              x="0.5"
              y="0.5"
            />
            <path
              class="unselected-filter-icon-inner-1"
              d="M16.2335889,6.4 L11.5555083,10.8333333 L11.5555083,14.8333333 C11.5555083,15.0166667 11.3972274,15.1666667 11.2037729,15.1666667 L9.7968314,15.1666667 C9.60337694,15.1666667 9.44509602,15.0166667 9.44509602,14.8333333 L9.44509602,10.8333333 L4.76701542,6.4 C4.55597419,6.2 4.69666834,5.83333333 5.01323019,5.83333333 L15.9697874,5.83333333 C16.303936,5.83333333 16.4446301,6.2 16.2335889,6.4 Z"
              fill="#212121"
            />
          </g>
        </g>
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Can sort when not using the tasks API and getting column sort value 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Third"
    data-css-9shxm7=""
  >
    <span>
      Third
    </span>
    <span
      aria-label="Sort by Third"
      data-css-hwg41t=""
      role="button"
      tabindex="0"
    >
      <svg
        class="table-icon"
        height="17"
        version="1.1"
        viewBox="0 0 13 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            fill-rule="nonzero"
          >
            <g
              data-testid="topColorGroup"
              fill="#d6d7d9"
              transform="translate(2.000000, 1.000000)"
            >
              <g
                transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
              >
                <path
                  d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                />
              </g>
            </g>
            <g
              data-testid="bottomColorGroup"
              fill="#d6d7d9"
              transform="translate(7.000000, 11.666667) scale(1, -1) translate(-7.000000, -11.666667) translate(2.000000, 9.000000)"
            >
              <g
                transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
              >
                <path
                  d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Can sort when the backend can sort and getting column sort value 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Third"
    data-css-9shxm7=""
  >
    <span>
      Third
    </span>
    <span
      aria-label="Sort by Third"
      data-css-hwg41t=""
      role="button"
      tabindex="0"
    >
      <svg
        class="table-icon"
        height="17"
        version="1.1"
        viewBox="0 0 13 16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fill-rule="evenodd"
          stroke="none"
          stroke-width="1"
        >
          <g
            fill-rule="nonzero"
          >
            <g
              data-testid="topColorGroup"
              fill="#d6d7d9"
              transform="translate(2.000000, 1.000000)"
            >
              <g
                transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
              >
                <path
                  d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                />
              </g>
            </g>
            <g
              data-testid="bottomColorGroup"
              fill="#d6d7d9"
              transform="translate(7.000000, 11.666667) scale(1, -1) translate(-7.000000, -11.666667) translate(2.000000, 9.000000)"
            >
              <g
                transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
              >
                <path
                  d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                />
              </g>
            </g>
          </g>
        </g>
      </svg>
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Matches snapshot with default props 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    stylename="header"
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    stylename="header"
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-label="Second"
    stylename="header"
  >
    <span>
      Second
    </span>
  </span>
</DocumentFragment>
`;

exports[`QueueTable HeaderRow Renders tooltip when present on the column 1`] = `
<DocumentFragment>
  <span
    aria-label="First"
    data-css-9shxm7=""
  >
    <span>
      First
    </span>
  </span>
  <span
    aria-label="Second"
    data-css-9shxm7=""
  >
    <span>
      Second
    </span>
  </span>
  <span
    aria-describedby="tooltip-2"
    aria-label=""
    currentitem="false"
    data-css-9shxm7=""
    data-event="focus mouseenter"
    data-event-off="mouseleave keydown"
    data-for="tooltip-2"
    data-tip="true"
    tabindex="0"
  >
    <span>
      Third
    </span>
  </span>
  <span
    data-css-mu3j8b=""
    data-testid="tooltip-testid"
  >
    <div
      class="__react_component_tooltip t00000000-0000-0000-0000-000000000000 place-top type-dark"
      data-id="tooltip"
      id="tooltip-2"
      role="tooltip"
    >
      <style>

  	.t00000000-0000-0000-0000-000000000000 {
	    color: #fff;
	    background: #222;
	    border: 1px solid transparent;
  	}

  	.t00000000-0000-0000-0000-000000000000.place-top {
        margin-top: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::before {
        border-top: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-top::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        bottom: -6px;
        left: 50%;
        margin-left: -8px;
        border-top-color: #222;
        border-top-style: solid;
        border-top-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-bottom {
        margin-top: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::before {
        border-bottom: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-bottom::after {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        top: -6px;
        left: 50%;
        margin-left: -8px;
        border-bottom-color: #222;
        border-bottom-style: solid;
        border-bottom-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-left {
        margin-left: -10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::before {
        border-left: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-left::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        right: -6px;
        top: 50%;
        margin-top: -4px;
        border-left-color: #222;
        border-left-style: solid;
        border-left-width: 6px;
    }

    .t00000000-0000-0000-0000-000000000000.place-right {
        margin-left: 10px;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::before {
        border-right: 8px solid transparent;
    }
    .t00000000-0000-0000-0000-000000000000.place-right::after {
        border-top: 5px solid transparent;
        border-bottom: 5px solid transparent;
        left: -6px;
        top: 50%;
        margin-top: -4px;
        border-right-color: #222;
        border-right-style: solid;
        border-right-width: 6px;
    }

      </style>
      Some text
    </div>
  </span>
</DocumentFragment>
`;

exports[`QueueTable Row Matches snapshot with default props 1`] = `
<DocumentFragment>
  First columnSecond column
</DocumentFragment>
`;

exports[`QueueTable Row Renders footer when the column is set to a footer 1`] = `
<DocumentFragment>
  Some Footer
</DocumentFragment>
`;

exports[`QueueTable render() Can filter rows 1`] = `
<DocumentFragment>
  <div
    class="cf-table-wrapper"
    data-testid="queue-table-data-testid"
  >
    <table
      aria-describedby="case-table-description"
      aria-label="Appeals"
      class="usa-table-borderless undefined"
      id="case-table-description"
      role="grid"
    >
      <caption
        class="usa-sr-only"
        id="case-table-description"
      >
        Example table summary
      </caption>
      <thead>
        <tr
          role="row"
        >
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="First"
              data-css-9shxm7=""
            >
              <span>
                First
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
          <th
            aria-labelledby="header-type"
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Third"
              data-css-9shxm7=""
            >
              <span
                id="header-type"
              >
                Third
              </span>
              <span
                data-css-ilmt4b=""
                data-testid="table-filter-testid"
              >
                <svg
                  class="table-icon unselected-filter-icon"
                  height="20"
                  role="button"
                  tabindex="0"
                  viewBox="0 0 21 21"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <rect
                        class="unselected-filter-icon-border-1"
                        fill="#fff"
                        fill-rule="nonzero"
                        height="20"
                        rx="2"
                        stroke="#212121"
                        width="20"
                        x="0.5"
                        y="0.5"
                      />
                      <path
                        class="unselected-filter-icon-inner-1"
                        d="M16.2335889,6.4 L11.5555083,10.8333333 L11.5555083,14.8333333 C11.5555083,15.0166667 11.3972274,15.1666667 11.2037729,15.1666667 L9.7968314,15.1666667 C9.60337694,15.1666667 9.44509602,15.0166667 9.44509602,14.8333333 L9.44509602,10.8333333 L4.76701542,6.4 C4.55597419,6.2 4.69666834,5.83333333 5.01323019,5.83333333 L15.9697874,5.83333333 C16.303936,5.83333333 16.4446301,6.2 16.2335889,6.4 Z"
                        fill="#212121"
                      />
                    </g>
                  </g>
                </svg>
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="testClasses"
          id="table-row-0"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Something
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-1"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column second row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column second row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Something Else
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-2"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column third row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column third row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</DocumentFragment>
`;

exports[`QueueTable render() Can sort rows 1`] = `
<DocumentFragment>
  <div
    class="cf-table-wrapper"
    data-testid="queue-table-data-testid"
  >
    <table
      aria-describedby="case-table-description"
      aria-label="Appeals"
      class="usa-table-borderless undefined"
      id="case-table-description"
      role="grid"
    >
      <caption
        class="usa-sr-only"
        id="case-table-description"
      >
        Example table summary
      </caption>
      <thead>
        <tr
          role="row"
        >
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="First"
              data-css-9shxm7=""
            >
              <span>
                First
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Third"
              data-css-9shxm7=""
            >
              <span>
                Third
              </span>
              <span
                aria-label="Sort by Third"
                data-css-hwg41t=""
                role="button"
                tabindex="0"
              >
                <svg
                  class="table-icon"
                  height="17"
                  version="1.1"
                  viewBox="0 0 13 16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g
                      fill-rule="nonzero"
                    >
                      <g
                        data-testid="topColorGroup"
                        fill="#d6d7d9"
                        transform="translate(2.000000, 1.000000)"
                      >
                        <g
                          transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
                        >
                          <path
                            d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                          />
                        </g>
                      </g>
                      <g
                        data-testid="bottomColorGroup"
                        fill="#d6d7d9"
                        transform="translate(7.000000, 11.666667) scale(1, -1) translate(-7.000000, -11.666667) translate(2.000000, 9.000000)"
                      >
                        <g
                          transform="translate(5.000000, 2.666667) scale(-1, 1) rotate(-180.000000) translate(-5.000000, -2.666667) "
                        >
                          <path
                            d="M9.48148147,0.592592593 C9.48148147,0.75308642 9.42283953,0.891975307 9.30555553,1.00925926 L5.15740741,5.15740741 C5.04012346,5.27469136 4.90123457,5.33333333 4.74074074,5.33333333 C4.58024691,5.33333333 4.44135803,5.27469136 4.32407407,5.15740741 L0.175925926,1.00925926 C0.0586419753,0.891975307 0,0.75308642 0,0.592592593 C0,0.432098765 0.0586419753,0.293209877 0.175925926,0.175925926 C0.293209877,0.0586419753 0.432098765,0 0.592592593,0 L8.88888887,0 C9.04938273,0 9.1882716,0.0586419753 9.30555553,0.175925926 C9.42283953,0.293209877 9.48148147,0.432098765 9.48148147,0.592592593 Z"
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="testClasses"
          id="table-row-0"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Something
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-1"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column second row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column second row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Something Else
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-2"
          role="row"
        >
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            First column third row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            Second column third row
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</DocumentFragment>
`;

exports[`QueueTable render() Matches snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="cf-table-wrapper"
    data-testid="queue-table-data-testid"
  >
    <table
      aria-describedby="case-table-description"
      aria-label="Appeals"
      class="usa-table-borderless undefined"
      id="case-table-description"
      role="grid"
    >
      <caption
        class="usa-sr-only"
        id="case-table-description"
      >
        Example table summary
      </caption>
      <thead>
        <tr
          role="row"
        >
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="First"
              data-css-9shxm7=""
            >
              <span>
                First
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="testClasses"
          id="table-row-0"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-1"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-2"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
  </div>
</DocumentFragment>
`;

exports[`QueueTable render() Renders loading component instead of body when loading data 1`] = `
<DocumentFragment>
  <div
    class="cf-table-wrapper"
    data-testid="queue-table-data-testid"
  >
    <section
      class="testClasses"
    >
      <div
        data-css-1ogvp9u=""
      >
        <div>
          <div
            class="cf-loading-button-symbol cf-small-loader-symbol"
          >
            <svg
              class="cf-react-icon-loading-back"
              height="150px"
              viewBox="0 0 500 500"
              width="150px"
            >
              <path
                d="M249.9,362c-6.5,0-12.8,1.2-18.9,3.5l-34.4,13.3l12.7,28.8l33-12.8c2.4-0.9,5-1.4,7.5-1.4s5.1,0.5,7.5,1.4 l33.2,12.8l12.7-28.8l-34.6-13.4C262.7,363.2,256.4,362,249.9,362 M418.9,319.9l-28.8,12.7l19.1,49.6c3.5,9,0.1,15.9-2.1,19.3 c-4,5.8-10.4,9.3-17.2,9.3h0c-2.6,0-5.2-0.5-7.7-1.5l-49.5-19.1L320,418.9l50.9,19.7c6.2,2.4,12.6,3.6,19,3.6h0 c17.1,0,33.2-8.6,43.1-23c9.8-14.3,11.9-32,5.5-48.3L418.9,319.9 M81,319.9l-19.7,51c-6.3,16.4-4.3,34,5.5,48.3 c9.9,14.4,26,23,43.1,23c6.4,0,12.9-1.2,19-3.6l51-19.7l-12.7-28.8l-49.5,19.1c-2.5,1-5.1,1.4-7.6,1.4c-6.8,0-13.3-3.4-17.3-9.3 c-2.3-3.3-5.6-10.3-2.1-19.2l19.1-49.6L81,319.9 M121.1,196.6l-28.8,12.7l12.8,33.1c1.9,4.9,1.9,10.2,0,15.1l-12.8,33.1l28.8,12.7 l13.3-34.5c4.7-12.2,4.7-25.6,0-37.7L121.1,196.6 M378.8,196.5l-13.3,34.5c-4.7,12.2-4.7,25.6,0,37.7l13.3,34.5l28.8-12.7 l-12.8-33.1c-1.9-4.9-1.9-10.2,0-15.1l12.8-33.1L378.8,196.5 M290.6,92.3l-33.2,12.8c-2.4,0.9-5,1.4-7.5,1.4 c-2.6,0-5.1-0.5-7.5-1.4l-33-12.7l-12.7,28.8l34.4,13.3c6,2.3,12.4,3.5,18.8,3.5c6.4,0,12.8-1.2,18.9-3.5l34.6-13.4L290.6,92.3 M110,57.8c-17.1,0-33.2,8.6-43.1,23c-9.8,14.3-11.9,32-5.5,48.3L81,180l28.8-12.7l-19.1-49.4c-3.5-9-0.1-15.9,2.1-19.2 c4-5.9,10.5-9.3,17.3-9.3c2.5,0,5.1,0.5,7.6,1.4l49.5,19.1L180,81.1l-50.9-19.7C122.9,59,116.5,57.8,110,57.8 M389.9,57.8 c-6.4,0-12.9,1.2-19,3.6L319.9,81l12.7,28.8l49.5-19.1c2.5-1,5.1-1.4,7.6-1.4c6.8,0,13.3,3.4,17.3,9.3c2.3,3.3,5.6,10.3,2.1,19.2 l-19.1,49.5l28.8,12.7l19.7-50.9c6.3-16.4,4.3-34-5.5-48.3C423.1,66.3,407,57.8,389.9,57.8M303.4,378.9l-12.7,28.8l29.3,11.3l12.7-28.8L303.4,378.9 M196.6,378.8l-29.3,11.3l12.7,28.8l29.3-11.3 L196.6,378.8 M407.6,290.6l-28.8,12.7l11.3,29.3l28.8-12.7L407.6,290.6 M92.4,290.5L81,319.9l28.8,12.7l11.3-29.3L92.4,290.5 M109.8,167.2L81,180l11.3,29.3l28.8-12.7L109.8,167.2 M390.1,167.2l-11.3,29.3l28.8,12.7l11.3-29.3L390.1,167.2 M180,81.1 l-12.7,28.8l29.3,11.3l12.7-28.8L180,81.1 M319.9,81l-29.3,11.3l12.7,28.8l29.3-11.3L319.9,81"
                fill="#11598D"
                fill-opacity="1"
                opacity="1"
              />
            </svg>
            <svg
              class="cf-react-icon-loading-front"
              height="150px"
              style="margin-left: -150px;"
              viewBox="0 0 500 500"
              width="150px"
            >
              <path
                d="M209.3,407.5L180,418.9l22.1,50C210.6,488.1,229,500,250,500s39.4-11.9,47.9-31.1l22.1-49.9l-29.3-11.3 l-21.5,48.5c-3.5,7.8-10.6,12.5-19.1,12.5c-8.5,0-15.7-4.7-19.1-12.5L209.3,407.5 M378.8,303.3l-33.8,15 c-11.9,5.3-21.4,14.7-26.7,26.7l-15,33.9l29.3,11.3l14.4-32.5c2.1-4.8,5.9-8.6,10.7-10.7l32.4-14.3L378.8,303.3 M121.1,303.3 l-11.3,29.3l32.4,14.4c4.8,2.1,8.6,5.9,10.7,10.7l14.4,32.5l29.3-11.3l-15-33.9c-5.3-11.9-14.8-21.4-26.7-26.7L121.1,303.3 M81,180 l-49.9,22.1C11.9,210.6,0,228.9,0,249.9c0,21,11.9,39.4,31.1,47.9L81,319.9l11.3-29.3l-48.5-21.5c-7.8-3.5-12.5-10.6-12.5-19.1 c0-8.5,4.7-15.7,12.5-19.1l48.5-21.5L81,180 M418.9,179.9l-11.3,29.3l48.6,21.5c7.8,3.5,12.5,10.6,12.5,19.1 c0,8.5-4.7,15.7-12.5,19.1l-48.6,21.5l11.3,29.3l50-22.1c19.2-8.5,31.1-26.9,31.1-47.9s-11.9-39.4-31.1-47.9L418.9,179.9 M167.3,109.8L153,142.2c-2.1,4.8-5.9,8.6-10.7,10.7l-32.5,14.4l11.3,29.3l33.9-15c11.9-5.3,21.4-14.7,26.7-26.7l14.9-33.7 L167.3,109.8 M332.7,109.8l-29.3,11.3l15,33.8c5.3,11.9,14.7,21.4,26.7,26.7l33.8,15l11.3-29.3l-32.4-14.4 c-4.8-2.1-8.6-5.9-10.7-10.7L332.7,109.8 M250,0c-21,0-39.4,11.9-47.9,31.2L180,81.1l29.3,11.3l21.5-48.5 c3.5-7.8,10.6-12.5,19.1-12.5c8.5,0,15.7,4.7,19.1,12.5l21.5,48.5L319.9,81l-22.1-49.9C289.3,11.9,271,0,250,0M303.4,378.9l-12.7,28.8l29.3,11.3l12.7-28.8L303.4,378.9 M196.6,378.8l-29.3,11.3l12.7,28.8l29.3-11.3 L196.6,378.8 M407.6,290.6l-28.8,12.7l11.3,29.3l28.8-12.7L407.6,290.6 M92.4,290.5L81,319.9l28.8,12.7l11.3-29.3L92.4,290.5 M109.8,167.2L81,180l11.3,29.3l28.8-12.7L109.8,167.2 M390.1,167.2l-11.3,29.3l28.8,12.7l11.3-29.3L390.1,167.2 M180,81.1 l-12.7,28.8l29.3,11.3l12.7-28.8L180,81.1 M319.9,81l-29.3,11.3l12.7,28.8l29.3-11.3L319.9,81"
                fill="#323a45"
                fill-opacity=".25"
                opacity="1"
              />
            </svg>
          </div>
        </div>
        <p />
      </div>
    </section>
  </div>
</DocumentFragment>
`;

exports[`QueueTable render() Renders pagination when set 1`] = `
<DocumentFragment>
  <div
    class="cf-table-wrapper"
    data-testid="queue-table-data-testid"
  >
    <div
      class="cf-pagination"
    >
      <div
        class="cf-pagination-summary"
      >
        Viewing 1-15 of 20 total
      </div>
      <div
        class="cf-pagination-pages"
      >
        <button
          aria-label="Previous Page"
          disabled=""
        >
          Previous
        </button>
        <button
          aria-current="page"
          aria-label="Page 1"
          class="cf-current-page"
          name="page-button-0"
        >
          1
        </button>
        <button
          aria-label="Page 2"
          class=""
          name="page-button-1"
        >
          2
        </button>
        <button
          aria-label="Next Page"
        >
          Next
        </button>
      </div>
    </div>
    <table
      aria-describedby="case-table-description"
      aria-label="Appeals"
      class="usa-table-borderless undefined"
      id="case-table-description"
      role="grid"
    >
      <caption
        class="usa-sr-only"
        id="case-table-description"
      >
        Example table summary
      </caption>
      <thead>
        <tr
          role="row"
        >
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="First"
              data-css-9shxm7=""
            >
              <span>
                First
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
          <th
            class="testClasses"
            role="columnheader"
            scope="col"
          >
            <span
              aria-label="Second"
              data-css-9shxm7=""
            >
              <span>
                Second
              </span>
            </span>
          </th>
        </tr>
      </thead>
      <tbody
        class=""
      >
        <tr
          class="testClasses"
          id="table-row-0"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-1"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-2"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-3"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-4"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-5"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-6"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-7"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-8"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-9"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-10"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-11"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-12"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-13"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
        <tr
          class="testClasses"
          id="table-row-14"
          role="row"
        >
          <td
            class="testClasses"
            colspan="2"
            role="gridcell"
            tabindex="-1"
          >
            fizz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            buzz
          </td>
          <td
            class="testClasses"
            colspan="1"
            role="gridcell"
            tabindex="-1"
          >
            EstablishClaim
          </td>
        </tr>
      </tbody>
      <tfoot />
    </table>
    <div
      class="cf-pagination"
    >
      <div
        class="cf-pagination-summary"
      >
        Viewing 1-15 of 20 total
      </div>
      <div
        class="cf-pagination-pages"
      >
        <button
          aria-label="Previous Page"
          disabled=""
        >
          Previous
        </button>
        <button
          aria-current="page"
          aria-label="Page 1"
          class="cf-current-page"
          name="page-button-0"
        >
          1
        </button>
        <button
          aria-label="Page 2"
          class=""
          name="page-button-1"
        >
          2
        </button>
        <button
          aria-label="Next Page"
        >
          Next
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
